# emcyphal

./: CNAME  LICENSE-MIT  README.md
emcyphal/: .gitignore  Cargo.toml
emcyphal-core/: Cargo.toml
emcyphal-core/src/: lib.rs
emcyphal-driver/: Cargo.toml
emcyphal-driver/src/: frame.rs  internal.rs  lib.rs  link.rs
emcyphal-encoding/: Cargo.toml
emcyphal-encoding/src/: lib.rs
emcyphal-stm32-embassy/: Cargo.toml
emcyphal-stm32-embassy/src/: config.rs  driver.rs  format.rs  lib.rs  utils.rs
emcyphal-stm32-native/: Cargo.toml  README.md
emcyphal-stm32-native/src/: config.rs  driver.rs  fmt.rs  format.rs  lib.rs  periphery.rs  raw.rs  utils.rs
emcyphal-stm32-native/src/message_ram/: common.rs  enums.rs  extended_filter.rs  generic.rs  mod.rs  rxfifo_element.rs  standard_filter.rs  txbuffer_element.rs  txevent_element.rs
emcyphal/src/: buffer.rs  data_types.rs  endpoint.rs  format.rs  lib.rs  marker.rs  node.rs  registry.rs  socket.rs  utils.rs
emcyphal/src/buffer/: gather.rs  rx_msg.rs  rx_priority_fifo.rs  rx_req.rs  scatter.rs  tx_msg.rs  tx_resp.rs
emcyphal/src/buffer/rx_msg/: priority_fifo.rs  watch.rs
emcyphal/src/buffer/rx_req/: priority_fifo.rs
emcyphal/src/buffer/tx_msg/: blocking.rs  signal.rs
emcyphal/src/buffer/tx_resp/: blocking.rs
emcyphal/src/data_types/: byte_array.rs  empty.rs  node.rs
emcyphal/src/node/: core_node.rs  minimal_node.rs
emcyphal/src/registry/: rx_msg.rs  rx_req.rs  tx_msg.rs  tx_queue.rs  tx_resp.rs
emcyphal/src/utils/: index_queue.rs  multi_class_queue.rs  priority_queue.rs  stacked_array.rs
emcyphal/tests/: heartbeat.rs  publisher.rs  responder.rs  subscriber.rs
nucleo-g431rb/: Cargo.toml  rust-toolchain.toml
nucleo-g431rb/.cargo/: config.toml
nucleo-g431rb/src/: board.rs  lib.rs
