[package]
name = "emcyphal-core"
version = "0.1.0"
edition = "2024"
description = "Common definition for Emcyphal network stack"
repository = "https://github.com/dan-stefanov/emcyphal"
authors = ["Dan Stefanov <danstefanov.u@gmail.com>"]
categories = ["embedded", "no-std", "asynchronous", "network-programming"]
license = "MIT OR Apache-2.0"


[dependencies]
defmt = { version = "1.0.1", optional = true }

[features]
defmt = ["dep:defmt"]
