[package]
name = "emcyphal-driver"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-time = { version = "0.5.0" }

defmt = { version = "1.0.1", optional = true }

emcyphal-core = { version = "0.1.0", path = "../emcyphal-core" }

[features]
defmt = ["dep:defmt", "emcyphal-core/defmt", "embassy-time/defmt"]
