[package]
name = "emcyphal"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-sync = { version = "0.7.2" }
embassy-futures = { version = "0.1.2" }
embassy-time = { version = "0.5.0" }

embedded-can = "0.4.1"
heapless = { version = "0.9.1", default-features = false }
futures = { version =  "0.3.31",  default-features = false }
defmt = { version = "1.0.1", optional = true }
intrusive-collections = { version = "0.9.7", default-features = false }

emcyphal-core = { version = "0.1.0", path = "../emcyphal-core" }
emcyphal-driver = { version = "0.1.0", path = "../emcyphal-driver" }
emcyphal-encoding = { version = "0.1.0", path = "../emcyphal-encoding" }

[dev-dependencies]
futures-executor = "0.3.17"
futures-task = "0.3.17"
futures-test = "0.3.17"
embassy-time = { version = "0.5.0", features = ["mock-driver", "generic-queue-16"] }
static_cell = { version = "2" }

# Enable critical-section implementation for std, for tests
critical-section = { version = "1.1", features = ["std"] }

[features]
defmt = ["dep:defmt", "emcyphal-core/defmt", "emcyphal-driver/defmt", "embassy-sync/defmt", "heapless/defmt"]
